<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_corner"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="成绩说明"
        android:gravity="center"
        android:textSize="16sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sub_medium_spacing"
        android:layout_marginLeft="@dimen/card_content_padding"
        android:layout_marginRight="@dimen/card_content_padding">
        <TextView
            android:layout_marginRight="20dp"
            android:paddingTop="10dp"
            android:textColor="@color/color_default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_grade_explain_str_1"
            />
        <TextView
            android:layout_marginRight="20dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_default_text"
            android:text="@string/str_grade_explain_str_2"
            />
        <TextView
            android:layout_marginRight="20dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_default_text"
            android:text="@string/str_grade_explain_str_3"
            />
        <TextView
            android:layout_marginRight="20dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_default_text"
            android:text="@string/str_grade_explain_str_4"
            />

    </LinearLayout>
</LinearLayout>