<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shape_round_dialog"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/color_default_text"
            android:text="@string/physicalExperimentLogin"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputLayoutNew"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_physical_login_student_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutNew"

                android:singleLine="true"
                android:enabled="false"
                android:hint="@string/student_id_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputLayoutNew"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_physical_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutNew"
                android:hint="@string/physicalLoginPassword"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:layout_gravity="end"
            android:text="@string/explain_physical_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorGray"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/whiteGrayFromQQ"
            android:orientation="horizontal" />
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            >
            <TextView
                android:id="@+id/btn_physical_login"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textColor="@color/color_dialog_confirm"
                style="@style/dialog_button_text"
                android:text="@string/notice_confirm"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>