<?xml version="1.0" encoding="utf-8"?>
<com.example.wusthelper.widget.MyArrowRectangleView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:splitMotionEvents="false"
    app:arrow_offset="30dp"
    app:arrow_width="16dp"
    app:arrow_height="8dp"
    app:radius="5dp"
    app:background_color="#FFFFFF"
    app:shadow_color="#66000000"
    app:shadow_thickness="5dp"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_chart_grade"
            android:background="?android:attr/selectableItemBackground"
            style="@style/mPopupWindowGradeLab"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/view_grade"
                android:textColor="@color/title_text_black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_scholarship_grade"
            android:background="?android:attr/selectableItemBackground"
            style="@style/mPopupWindowGradeLab"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/view_scholarship"
                android:textColor="@color/title_text_black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_explain_grade"
            android:background="?android:attr/selectableItemBackground"
            style="@style/mPopupWindowGradeLab"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/view_explain"
                android:textColor="@color/title_text_black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_GPA_segment_table_grade"
            android:background="?android:attr/selectableItemBackground"
            style="@style/mPopupWindowGradeLab"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/GPA_segment_table"
                android:textColor="@color/title_text_black"
                android:textSize="16sp" />

        </LinearLayout>




    </LinearLayout>

</com.example.wusthelper.widget.MyArrowRectangleView>
