<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <!--宽高比：1.935484-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <!-- 370 - 147 = 223dp-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_bg_round_corners"
        android:orientation="vertical">
        <com.example.wusthelper.widget.FlexibleScrollView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="223dp"
                android:background="@drawable/shape_dialog_bg_round_corners"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_update_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="更新内容："
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:paddingTop="@dimen/small_spacing"
                    android:paddingLeft="@dimen/medium_spacing"
                    android:gravity="center|left"
                    android:textSize="19sp"/>

                <TextView
                    android:id="@+id/tv_update_dialog_content"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_default_text"
                    android:lineSpacingMultiplier="1.2"
                    tools:text="@string/update_test"
                    android:gravity="left"
                    android:padding="@dimen/medium_spacing"
                    android:textSize="15sp"/>

            </LinearLayout>


        </com.example.wusthelper.widget.FlexibleScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/whiteGrayFromQQ"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/ll_update_dialog_content"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/btn_dialog_cancel"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    style="@style/dialog_button_text"
                    android:text="@string/update_later"/>
                <LinearLayout
                    android:background="@color/whiteGrayFromQQ"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/btn_dialog_open_the_link"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:textColor="@color/color_dialog_confirm"
                    style="@style/dialog_button_text"
                    android:text="@string/open_the_link"/>
                <LinearLayout
                    android:background="@color/whiteGrayFromQQ"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/btn_dialog_update"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:textColor="@color/color_dialog_confirm"
                    style="@style/dialog_button_text"
                    android:text="@string/update_now"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/btn_dialog_make_installed"
                    android:layout_width="wrap_content"
                    style="@style/dialog_button_text"
                    android:layout_centerInParent="true"
                    android:text="@string/make_installed"
                    android:textColor="@color/color_dialog_confirm"
                    android:visibility="gone"
                  />
            </RelativeLayout>



            <com.example.wusthelper.widget.NumberProgressBar
                android:id="@+id/npb_progress"
                style="@style/Update_ProgressBar"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="gone"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>



